--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,27 @@
+.env
+
+# Typical Structure for Web App if used in same repo for web ui/ux interface
+app/storage/
+public/storage
+public/build
+public/hot
+storage/pail
+public_html/storage
+public_html/hot
+bootstrap/compiled.php
+
 /vendor/
 node_modules/
 npm-debug.log
 yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
 storage/*.key
-.env
+
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
 
-/public/build
-/storage/pail
 .env.backup
 .env.production
 .phpactor.json
